--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
     width: 100%;
 }
 canvas{
-    display: block;
+   /* display: block; */
     vertical-align: bottom;
       }
 /* ---- particles.js container ---- */
