--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ canvas{
       margin-top: 5px;
       margin-left: 5px; }
 #stats{ border-radius: 3px 3px 0 0;
-    overflow: hidden; }
+    /*overflow: hidden;*/ }
 
 .count-particles{ border-radius: 0 0 3px 3px;
 }
